# sast-benchmark

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  coverage_cve_gaps.md
.github/: PULL_REQUEST_TEMPLATE.md
adversarial/: CHANGELOG.md  adversarial_benchmark.md  adversarial_benchmark.py  baseline_theauditor_tool_score.md  expectedresults-0.1.0.csv  expectedresults-0.2.0.csv
bash/: BENCHMARK.md  CHANGELOG.md  baseline_theauditor_tool_score.md  bash_benchmark.md  bash_benchmark.py  bash_ground_truth.yml  dev_roadmap.md  expectedresults-0.3.1.csv  expectedresults-0.4.0.csv  expectedresults-0.5.0.csv  expectedresults-0.5.1.csv  expectedresults-0.5.2.csv  expectedresults-0.5.3.csv
chains/: CHANGELOG.md  baseline_theauditor_tool_score.md  chain_benchmark.md  chain_benchmark.py  expectedresults-0.1.0.csv  expectedresults-0.2.0.csv  expectedresults-0.2.1.csv  expectedresults-0.2.2.csv  rename_map.json
go/: CHANGELOG.md  SCORING.md  baseline_theauditor_tool_score.md  dev_roadmap.md  expectedresults-0.1.csv  expectedresults-0.3.2.csv  expectedresults-0.4.0.csv  expectedresults-0.5.0.csv  expectedresults-0.5.1.csv  go.mod  go.sum  go_benchmark.md  theauditor.sarif
go/apps/: README.md
php/: AGENTS.md  CHANGELOG.md  SCORING.md  baseline_theauditor_tool_score.md  expectedresults-0.1.0.csv  expectedresults-0.2.0.csv  expectedresults-0.3.0.csv  expectedresults-0.3.1.csv  expectedresults-0.3.2.csv  php_benchmark.md  rename_map.json
ruby/: CHANGELOG.md  SCORING.md  baseline_theauditor_tool_score.md  dev_roadmap.md  expectedresults-0.1.0.csv  expectedresults-0.2.0.csv  expectedresults-0.3.0.csv  expectedresults-0.3.1.csv  expectedresults-0.3.2.csv  ruby_benchmark.md
rust/: CHANGELOG.md  SCORING.md  baseline_theauditor_tool_score.md  dev_roadmap.md  expectedresults-0.1.csv  expectedresults-0.3.2.csv  expectedresults-0.4.0.csv  expectedresults-0.5.0.csv  expectedresults-0.5.1.csv  expectedresults-0.5.2.csv  rename_map.json  rust_benchmark.md  rust_ground_truth.yml  theauditor.sarif  theauditor_current.sarif  theauditor_current_run.sarif  theauditor_new.sarif
rust/apps/anarchy_commerce/: Cargo.toml  README.md  package.json
rust/apps/anarchy_commerce/services/payments/src/: main.rs
rust/apps/anarchy_commerce/services/search/: Cargo.toml
rust/apps/anarchy_commerce/services/search/src/: main.rs
rust/apps/anarchy_commerce/shared/types/: package.json
rust/apps/anarchy_commerce/shared/types/src/: index.ts
rust/apps/anarchy_commerce/web/src/: App.tsx
rust/apps/anarchy_commerce/web/src/pages/: CheckoutPage.tsx
rust/apps/deepflow-rust/: Cargo.toml
rust/apps/deepflow-rust/src/: async_flow.rs  handlers.rs  lib.rs  patterns.rs  pipeline.rs  traits.rs
rust/apps/rocket_test/: Cargo.toml
rust/apps/rocket_test/src/: main.rs
rust/apps/rust_backend/: Cargo.toml
rust/apps/rust_backend/src/: handlers.rs  lib.rs  main.rs  patterns.rs  unsafe_ops.rs  vulnerable.rs
rust/apps/rust_jobqueue/: Cargo.toml  README.md
rust/apps/rust_jobqueue/crates/jobqueue-api/: Cargo.toml
rust/apps/rust_jobqueue/crates/jobqueue-api/src/: auth.rs  error.rs  handlers.rs  lib.rs  middleware.rs  routes.rs  server.rs
rust/apps/rust_jobqueue/crates/jobqueue-cli/: Cargo.toml
rust/apps/rust_jobqueue/crates/jobqueue-cli/src/: main.rs
rust/apps/rust_jobqueue/crates/jobqueue-cli/src/commands/: db.rs  job.rs  mod.rs  shell.rs
rust/apps/rust_jobqueue/crates/jobqueue-core/: Cargo.toml
rust/apps/rust_jobqueue/crates/jobqueue-core/src/: config.rs  error.rs  events.rs  metrics.rs  priority.rs  result.rs
rust/apps/rust_jobqueue/crates/jobqueue-db/: Cargo.toml
rust/apps/rust_jobqueue/crates/jobqueue-db/src/: backup.rs  lib.rs  migrations.rs  pool.rs  queries.rs  sqlite.rs
rust/apps/rust_jobqueue/crates/jobqueue-worker/: Cargo.toml
rust/apps/rust_jobqueue/crates/jobqueue-worker/src/: executor.rs  handlers.rs  health.rs  lib.rs  middleware.rs  scheduler.rs
rust/apps/warp_test/: Cargo.toml
rust/apps/warp_test/src/: main.rs
scripts/: convert_theauditor.py  migrate_bash.py  migrate_bash_to_flat.py  migrate_chains_leakage.py  migrate_php_leakage.py  migrate_ruby_testcode.py  migrate_rust_v051.py  score_sarif.py  validate_adversarial.py  validate_bash.py  validate_chains.py  validate_go.py  validate_php.py  validate_ruby.py  validate_rust.py  validate_vulnerable_apps.py
vulnerable_apps/rust/anarchy_commerce/: pyproject.toml
vulnerable_apps/rust/anarchy_commerce/services/gateway/: package.json
vulnerable_apps/rust/anarchy_commerce/services/gateway/src/: index.ts
vulnerable_apps/rust/anarchy_commerce/services/payments/: Cargo.toml
vulnerable_apps/rust/anarchy_commerce/services/payments/src/: main.rs
vulnerable_apps/rust/anarchy_commerce/services/search/src/: main.rs
vulnerable_apps/rust/anarchy_commerce/services/users/: main.py
vulnerable_apps/rust/anarchy_commerce/web/: package.json
vulnerable_apps/rust/anarchy_commerce/web/src/api/: client.ts
vulnerable_apps/rust/anarchy_commerce/web/src/pages/: SearchPage.tsx
vulnerable_apps/rust/anarchy_commerce/web/src/stores/: auth.ts  cart.ts
vulnerable_apps/rust/rust_calorie_app/: Cargo.toml
vulnerable_apps/rust/rust_calorie_app/migrations/: 001_initial.sql
vulnerable_apps/rust/rust_calorie_app/src/: config.rs
vulnerable_apps/rust/rust_calorie_app/src/db/: migrations.rs  pool.rs
vulnerable_apps/rust/rust_calorie_app/src/handlers/: auth.rs  meals.rs  mod.rs  reports.rs  schedules.rs
vulnerable_apps/rust/rust_calorie_app/src/models/: food_item.rs  mod.rs  schedule.rs  user.rs
vulnerable_apps/rust/rust_calorie_app/src/repositories/: meal_repo.rs  mod.rs  workout_repo.rs
vulnerable_apps/rust/rust_calorie_app/src/services/: auth_service.rs  calorie_calculator.rs  mod.rs  workout_service.rs
vulnerable_apps/rust/rust_calorie_app/src/validation/: mod.rs  validators.rs
vulnerable_apps/rust/rust_calorie_app/static/: index.html
vulnerable_apps/rust/rust_taint_app/: Cargo.toml
vulnerable_apps/rust/rust_taint_app/src/: commands.rs  database.rs  files.rs  handlers.rs  main.rs  memory_ops.rs  network.rs  traits.rs
(+13045 files in other folders)
