[workspace]
resolver = "2"
members = [
    "services/payments",
    "services/search",
    "workers/image-processor"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Anarchy Commerce <dev@anarchy.commerce>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across Rust services
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
