[package]
name = "deepflow-rust"
version = "0.1.0"
edition = "2021"
description = "Complex dataflow patterns for taint analysis - deep call chains, async flows, trait polymorphism"

[dependencies]
# Web framework - Actix
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"

# Database - SQLx (async)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres"] }

# HTTP client for SSRF testing
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment and config
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async channels for complex dataflow
async-channel = "2"
flume = "0.11"

# For trait object examples
dyn-clone = "1"

[dev-dependencies]
tokio-test = "0.4"
