[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"
description = "Intentionally vulnerable Rust backend for SAST testing"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (with raw SQL capability)
diesel = { version = "2.1", features = ["postgres", "r2d2"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client (for SSRF)
reqwest = { version = "0.11", features = ["json"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Unsafe deserialization
bincode = "1.3"

# Environment variables
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2.9"
