[package]
name = "warp_test"
version = "0.1.0"
edition = "2021"
description = "Warp framework test app for TheAuditor taint analysis"

[dependencies]
# Warp web framework
warp = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (for SQL injection testing)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rusqlite = "0.31"

# HTTP client (for SSRF testing)
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Environment
dotenv = "0.15"

# Crypto
sha1 = "0.10"

# Bytes handling
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
