[project]
name = "anarchy-commerce-python"
version = "0.1.0"
description = "Python services for Anarchy Commerce"
requires-python = ">=3.11"

[tool.poetry]
name = "anarchy-commerce-python"
version = "0.1.0"
description = "Python services for Anarchy Commerce"
packages = [
    { include = "services/users" },
    { include = "services/recommendations" },
    { include = "workers/email_sender" },
    { include = "shared/python" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.5.0"
httpx = "^0.26.0"
redis = "^5.0.0"
celery = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false  # Intentionally loose for testing

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
