[package]
name = "rust_calorie_app"
version = "0.1.0"
edition = "2021"
description = "Functional calorie tracking app with meals, workouts, and scheduling"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database - SQLx (async, compile-time checked)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Validation (Rust's Joi/Zod equivalent)
validator = { version = "0.16", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Environment config
dotenv = "0.15"
dotenvy = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Regex for validation
regex = "1"
once_cell = "1"

# Futures for middleware
futures = "0.3"

# Password hashing
bcrypt = "0.15"

# JWT for auth
jsonwebtoken = "9"

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
