[package]
name = "jobqueue-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core types, traits, and error definitions for JobQueue"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
